Got the animations laid out and working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,18 +49,12 @@
 					<h3>Today's Announcements</h3>
 					 <p><%= @announcement.content %></p>
 				</div>
-				<div class="row-fluid" id="postits">
-					<a href="http://www.yearbookforever.com/ssDeepLink.aspx?sid=1-23J-32132&dest=BAYB"><div class="span4" id="yearbook">
-						<img src="" alt="Buy a Yearbook" />
-					</div></a>
-					<div class="span4" id="snowflake">
-						<h4>Support LB Storm Clean-Up</h4>
-						<p>Buy a Secret Snowflake from Leadership</p>
-					</div>
-					<div class="span4" id="playfest">
-						<h4>Join playfest!</h4>
-						<p>Contact your grade's government for more information about how you can get involved</p>
-					</div>
+				<div id="memos">
+			    <div id="slider">
+				    Test.
+			    </div>
+				  <div id="advance"></div>
+				  <div id="reverse"></div>
 				</div>
 				<div class="row-fluid" id="events">
 					<div class="span6" id="upcoming">
@@ -71,19 +65,6 @@
 						<h3>Recent Events</h3>
 						<p>OTHER EVENTS</p>
 					</div>
-				</div>
-			</div>
-			<div class="well" id="sidebar">
-				<a href="http://www.yearbookforever.com/ssDeepLink.aspx?sid=1-23J-32132&dest=BAYB"><div id="yearbook">
-					<img src="" alt="Buy a Yearbook" />
-				</div></a>
-				<div id="snowflake">
-					<h4>Support LB Storm Clean-Up</h4>
-					<p>Buy a Secret Snowflake from Leadership</p>
-				</div>
-				<div id="playfest">
-					<h4>Join playfest!</h4>
-					<p>Contact your grade's government for more information about how you can get involved</p>
 				</div>
 			</div>
 		</div>		
