--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -70,10 +70,6 @@
 		}
 	}
 	
-	#postits {
-		display: none !important;
-	}
-	
 	#yearbook {
 		background: {
 			color: #c51046;
@@ -118,13 +114,6 @@ body {
 	@include backgroundNoise;
 }
 
-#sidebar {
-	display: none;
-}
-
-#all {
-	
-}
 
 #stuff {
 	@include pie;
@@ -227,68 +216,6 @@ body {
 	width: 84%;
 }
 
-#postits {
-	$height: 140px;
-	@include pie;
-	margin: 0 auto;
-	margin: {
-		top: 12px;
-		bottom: 10px;
-	}
-	width: 89% !important;
-	.span4 {
-		background: {
-			color: red;
-		}
-		border-radius: 15px;
-		box-shadow: 0px 1px 6px rgba(0,0,0,0.8);
-		height: $height;
-		min-height: $height;
-		max-height: $height;
-		padding: {
-			top: 2px;
-			bottom: 2px;
-		}
-		text-align: center;
-		&:hover {
-			box-shadow: 0px 1px 7px 1px black;
-		}
-	}
-	#yearbook {
-		background: {
-			color: #c51046 !important;
-		}
-	}
-	#snowflake {
-		background: {
-			color: #286cff !important;
-		}
-		color: white;
-		p {
-			position: relative;
-			margin: 0 auto;
-			top: 23px;
-			width: 80%;
-		}
-		h4 {
-			position: relative;
-			top: 10px;
-			margin: 0 auto;
-			width: 80%;
-		}
-	}
-	#playfest {
-		color: white;
-		background: {
-			color: #319358 !important;
-		}
-		p {
-			margin: 0 auto;
-			width: 90%
-		}
-	}
-}
-
 #events {
 	$bottomPadding: 10px;
 	text-align: justify;
@@ -325,4 +252,40 @@ body {
 			bottom: $bottomPadding;
 		}
 	}
+}
+
+#memos {
+  min-height: 11em;
+  display: block;
+  background: {
+    color: blue;
+  }
+  margin: {
+    right: auto;
+    left: auto;
+  }
+  overflow: hidden;
+  width: 89%;
+  #slider {
+    background: {
+      color: green;
+    }
+    min-height: 10em;
+    position: relative;
+    width: 10000px;
+  }
+  #advance {
+    height: 20px;
+    width: 20px;
+    background-color: yellow;
+    top: 10em;
+    display: block;
+  }
+  #reverse {
+    height: 20px;
+    width: 20px;
+    background-color: purple;
+    top: 10em;
+    display: block;
+  }
 }
