--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,12 @@
 				</div>
 				<div id="memos">
 			    <div id="slider">
-				    Test.
+				    <% @memos.each do |memo| %>
+				      <div class="memo">
+				        <h2><%= memo.title %></h2>
+				        <p><%= memo.content %></p>
+				      </div>
+				    <% end %>
 			    </div>
 				  <div id="advance"></div>
 				  <div id="reverse"></div>
