Got the animation working nicely with multiple sets of memos

--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -266,26 +266,38 @@ body {
   }
   overflow: hidden;
   width: 89%;
-  #slider {
-    background: {
-      color: green;
-    }
-    min-height: 10em;
-    position: relative;
-    width: 10000px;
+}
+
+#slider {
+  background: {
+    color: green;
   }
-  #advance {
-    height: 20px;
-    width: 20px;
-    background-color: yellow;
-    top: 10em;
-    display: block;
+  margin: {
+    left: -4px;
   }
-  #reverse {
-    height: 20px;
-    width: 20px;
-    background-color: purple;
-    top: 10em;
-    display: block;
+  min-height: 10em;
+  position: relative;
+  width: 10000px;
+}
+#advance {
+  top: 10em;
+  display: block;
+}
+#reverse {
+  top: 10em;
+  display: block;
+}
+
+.memo {
+  background: {
+    color: red;
   }
+  display: inline-block;
+  margin: {
+    left: 4px;
+    right: 4px;
+  }
+  padding: 0;
+  height: 12em;
+  width: 271px;
 }
