Cleaned up functionality/styling

--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -257,10 +257,8 @@ body {
 #memos {
   min-height: 11em;
   display: block;
-  background: {
-    color: blue;
-  }
   margin: {
+    top: .8em;
     right: auto;
     left: auto;
   }
@@ -269,34 +267,33 @@ body {
 }
 
 #slider {
-  background: {
-    color: green;
-  }
   margin: {
     left: -4px;
   }
   min-height: 10em;
   position: relative;
-  width: 10000px;
+  width: 3400px;
 }
 #advance {
-  top: 10em;
+  top: 30em;
+  left: 894px;
+  position: absolute;
   display: block;
 }
 #reverse {
-  top: 10em;
+  top: 30em;
+  left: 9px;
+  position: absolute;
   display: block;
 }
 
 .memo {
-  background: {
-    color: red;
-  }
   display: inline-block;
   margin: {
     left: 4px;
     right: 4px;
   }
+  text-align: center;
   padding: 0;
   height: 12em;
   width: 271px;
