Got it all working. Time to merge!

--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -10,13 +10,13 @@
       </ul>
     </div>
   <% end %>
+  
+ <%= f.label :title %>:<%= f.text_field :title %>
+ Background Color: <%= f.text_field :bg_color %>
+ Text Color: <%= f.text_field :text_color %><br /<
+ <%= f.label :content %>:<br /><%= f.text_area :content %>
 
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
- 
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save Memo", class: "btn btn-primary pull-right" %>
   </div>
 <% end %>
