--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -10,10 +10,21 @@
     .accordion-group {
       background-color: white;
     }
-    
+    .accordion-inner {
+      padding-bottom: 1.4em;
+    }
+    label {
+      display: inline;
+    }
+    textarea {
+      width: 98%;
+      height: 12em;
+    }
   </style>
 </head>
 <div class="container">
+
+  <% unless notice.nil? %><div class=""><%= notice %></div><% end %>
 
   <div class="accordion" id="accordion2">
     <div class="accordion-group">
@@ -26,7 +37,10 @@
         <div class="accordion-inner">
           <%= form_for(@memo) do |f| %>
             
-            <%= f.label :title %><%= f.text_field :title %>
+            <%= f.label :title %>:<%= f.text_field :title %>
+            Background Color: <%= f.text_field :bg_color %>
+            Text Color: <%= f.text_field :text_color %><br /<
+            <%= f.label :content %>:<br /><%= f.text_area :content %>
             
             <%= f.submit "Create Memo", class: "btn btn-primary pull-right" %>
           
@@ -53,8 +67,8 @@
         <td><%= memo.id %></td>
         <td><%= memo.title %></td>
         <td><%= memo.content %></td>
-        <td><%= memo.bg_color %></td>
-        <td></td>
+        <td <% unless memo.bg_color.empty? || memo.bg_color.nil? %>style="color: <%= memo.bg_color %>;"<% end %>><% if memo.bg_color.nil? %>Not Set<% else %><%= memo.bg_color %><% end %></td>
+        <td style="color: <% if memo.text_color.empty? %>black<% else %><%= memo.text_color %><% end %>;<% if memo.text_color.downcase == "white" %> text-shadow: black 1px 1px 2px;<% end %>"><% if memo.text_color.empty? %>Black<% else %><%= memo.text_color %><% end %></td>
         <td><% if memo.is_image? %>Yes<% else %>No<% end %></td>
         <td><%= link_to "Edit", :controller => 'memos', :action => 'edit', :id => memo.id %></td>
         <td><%= link_to "Delete", memo, :method => :delete, :confirm => "Are you sure you want to delete this memo?" %></td>
