Switched to devise for user authentication.
Let's hope this works.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
   						<ul class="dropdown-menu">
   						  <li><a href="#">Test.</a></li>
   						  <li class="divider"></li>
-  						  <li><%= link_to "Log Out", logout_url, class: "logout" %></li>
+  						  <li><%= link_to "Log out", destroy_user_session_path%></li>
   						</ul>
 						</li>
 				  <% else %>
@@ -32,7 +32,7 @@
               <div id="box">
                 <h3 style="text-align: center">Sign In</h1>
                   <div id="form_box">
-                  <%= form_for(:session, url: sessions_path) do |f| %>
+                  <%= form_for(:user, :as => :user, :url => session_path(:user)) do |f| %>
                     <%= f.label :email %>
                     <%= f.text_field :email %>
                       
@@ -44,7 +44,7 @@
                     </div>
                   <% end %><!-- end of form -->
                 <div class = "link">
-                  <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+                  <p>New user? <%= link_to "Sign up now!", user_registration_path %></p>
                 </div>
               </div>
             
