--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,7 @@
                     </div>
                   <% end %><!-- end of form -->
                 <div class = "link">
-                  <p>New user? <%= link_to "Sign up now!", user_registration_path %></p>
+                  <p>New user? <%= link_to "Sign up now!", new_user_registration_path %></p>
                 </div>
               </div>
             
