--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,34 @@
-<h2>Sign up</h2>
+<div class = "content" style = "margin-bottom: 10px;">
+  <div class = "row-fluid" >
+    <div id = "box" class = "span6 offset3">
+      <h2>Sign up</h2>
+      <div style = "float: left; text-align: left;" class = "offset3">
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <div>
+          <%= f.label :email %>
+          <%= f.email_field :email, :autofocus => true %>
+        </div>
+        <br />
+        <div>
+          <%= f.label :name %>
+          <%= f.text_field :name %>
+        </div>
+        <br />
+        <div>
+          <%= f.label :password %>
+          <%= f.password_field :password %>
+        </div>
+        <br />
+        <div>
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation %>
+        </div>
+      </div>
+      <div style = "clear: both;"><%= f.submit "Sign up", class: "btn btn-large btn-primary" %></div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
