--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,3 +1,4 @@
+<% photo_path = "/assets/sports/" + @sport.slug + ".png" %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +13,7 @@
   </script>
   <style type="text/css">
     #title { 
-      background-image: url( <%= @sport.photo_path %> );
+      background-image: url( <%= photo_path %> );
     }
   </style>
 </head>
