--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2924,12 +2924,12 @@ table th[class*="span"],
 .dropdown-submenu:hover > a {
   color: #ffffff;
   text-decoration: none;
-  background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-color: #629b63;
+  background-image: -moz-linear-gradient(top, #629b63, #466843);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#629b63), to(#466843));
+  background-image: -webkit-linear-gradient(top, #629b63, #466843);
+  background-image: -o-linear-gradient(top, #629b63, #466843);
+  background-image: linear-gradient(to bottom, #629b63, #466843);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
@@ -2938,12 +2938,12 @@ table th[class*="span"],
 .dropdown-menu .active > a:hover {
   color: #ffffff;
   text-decoration: none;
-  background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-color: #629b63;
+  background-image: -moz-linear-gradient(top, #629b63, #466843);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#629b63), to(#466843));
+  background-image: -webkit-linear-gradient(top, #629b63, #466843);
+  background-image: -o-linear-gradient(top, #629b63, #466843);
+  background-image: linear-gradient(to bottom, #629b63, #466843);
   background-repeat: repeat-x;
   outline: 0;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
