--- a/app/views/buses/_form.html.erb
+++ b/app/views/buses/_form.html.erb
@@ -10,6 +10,36 @@
       </ul>
     </div>
   <% end %>
+  <div class="row">
+    <div class="span3"><%= f.label :one %><%= f.text_field :one %></div>
+    <div class="span3"><%= f.label :two %><%= f.text_field :two %></div>
+    <div class="span3"><%= f.label :three %><%= f.text_field :three %></div>
+    <div class="span3"><%= f.label :four %><%= f.text_field :four %></div>
+  </div>
+   <div class="row">
+    <div class="span3"><%= f.label :five %><%= f.text_field :five %></div>
+    <div class="span3"><%= f.label :six %><%= f.text_field :six %></div>
+    <div class="span3"><%= f.label :seven %><%= f.text_field :seven %></div>
+    <div class="span3"><%= f.label :eight %><%= f.text_field :eight %></div>
+  </div>
+   <div class="row">
+    <div class="span3"><%= f.label :nine %><%= f.text_field :nine %></div>
+    <div class="span3"><%= f.label :ten %><%= f.text_field :ten %></div>
+    <div class="span3"><%= f.label :eleven %><%= f.text_field :eleven %></div>
+    <div class="span3"><%= f.label :twelve %><%= f.text_field :twelve %></div>
+  </div>
+   <div class="row">
+    <div class="span3"><%= f.label :thirteen %><%= f.text_field :thirteen %></div>
+    <div class="span3"><%= f.label :fourteen %><%= f.text_field :fourteen %></div>
+    <div class="span3"><%= f.label :fifteen %><%= f.text_field :fifteen %></div>
+    <div class="span3"><%= f.label :sixteen %><%= f.text_field :sixteen %></div>
+  </div>
+   <div class="row">
+    <div class="span3"><%= f.label :seventeen %><%= f.text_field :seventeen %></div>
+    <div class="span3"><%= f.label :eighteen %><%= f.text_field :eighteen %></div>
+    <div class="span3"><%= f.label :nineteen %><%= f.text_field :nineteen %></div>
+    <div class="span3"></div>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
