--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Harbingernews</title>
-  <%= stylesheet_link_tag    "sports_index", :media => "all" %>
-  <%= javascript_include_tag "sports" %>
-  <%= csrf_meta_tags %>
+<% content_for :css do %>
+  <%= stylesheet_link_tag "sports_index", :media => "all" %>
+<% end %>
+<% content_for :js do %>
   <script type="text/javascript">
     $(function(){
     	$time = 150;
@@ -21,88 +18,80 @@
     	$('#nav_sports').addClass('active');
     });
   </script>
-</head>
-<body>
-  <div id="content">
-  <%= render 'layouts/header' %>
-    <div class="container" id="center">
-    	<ul class="nav nav-tabs affix-top container" data-spy="affix" data-offset-top="60" id="seasonsswitcher">
-    		<li id="firsttab"><a></a></li>
-    		<li><a href="#fall" data-toggle="tab">Fall</a></li>
-    		<li class="active"><a href="#winter" data-toggle="tab">Winter</a></li>
-    		<li><a href="#spring" data-toggle="tab">Spring</a></li>
-    	</ul>
-    	<div class="row-fluid">
-    		<div class="span8">
-    			<div class="tab-content">
-    				<div class="tab-pane" id="fall">
-    					<% @fall.each do |sport| %>
-    					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-    					<div class="sport" style="background-image: url(<%= photo_path %>);">
-    						<div class="inner">
-    					  		<h2><%= sport.title %></h2>
-    				  			<div class="holder">
-    				  				<div class="pull-left">
-    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
+<% end %>
+<div id="center">
+	<ul class="nav nav-tabs affix-top container" data-spy="affix" data-offset-top="60" id="seasonsswitcher">
+		<li id="firsttab"><a></a></li>
+		<li><a href="#fall" data-toggle="tab">Fall</a></li>
+		<li class="active"><a href="#winter" data-toggle="tab">Winter</a></li>
+		<li><a href="#spring" data-toggle="tab">Spring</a></li>
+	</ul>
+	<div class="row-fluid">
+		<div class="span8">
+			<div class="tab-content">
+				<div class="tab-pane" id="fall">
+					<% @fall.each do |sport| %>
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
 
-                                        <!-- Change 0.0.0.0:3000 - not localhost -->
-    								</div>
-    								<div class="pull-right">
-    									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-    					<% end %>
-    				</div>
-    				<div class="tab-pane active" id="winter">
-    					<% @winter.each do |sport| %>
-    					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-    					<div class="sport" style="background-image: url(<%= photo_path %>);">
-    						<div class="inner">
-    					  		<h2><%= sport.title %></h2>
-    				  			<div class="holder">
-    				  				<div class="pull-left">
-    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
-    								</div>
-    								<div class="pull-right">
-    									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-    					<% end %>
-    				</div>
-    				<div class="tab-pane" id="spring">
-    					<% @spring.each do |sport| %>
-    					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-    					<div class="sport" style="background-image: url(<%= photo_path %>);">
-    						<div class="inner">
-    					  		<h2><%= sport.title %></h2>
-    				  			<div class="holder">
-    				  				<div class="pull-left">
-    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
-    								</div>
-    								<div class="pull-right">
-    									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-    					<% end %>
-    				</div>
-    		  </div><!-- end "tab-content" -->
-    		</div>
-    		  
-    	  <div class="span4 hidden-phone" id="recent_events">
-    			<div class="well">
-    			  <h3>Recent Events</h3>
-    			</div>
-    	  </div>
-      </div>
-    </div>
-    <div id="footer_spacer"></div>
-	</div><!-- end "content"-->
-	<%= render 'layouts/footer' %>
-</body>
-</html>
+                                    <!-- Change 0.0.0.0:3000 - not localhost -->
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				<div class="tab-pane active" id="winter">
+					<% @winter.each do |sport| %>
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				<div class="tab-pane" id="spring">
+					<% @spring.each do |sport| %>
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+		  </div><!-- end "tab-content" -->
+		</div>
+		  
+	  <div class="span4 hidden-phone" id="recent_events">
+			<div class="well">
+			  <h3>Recent Events</h3>
+			</div>
+	  </div>
+  </div>
+</div>
