--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -4,9 +4,7 @@
 
 @import "compass/css3/box-shadow";
 @import "compass/css3/border-radius";
-@import "bootstrap";
-@import "bootstrap-responsive";
-@import "all";
+@import 'all';
 
 // Tablet-Size and Under
 @media all and (max-width: 767px) {
