--- a/app/views/memos/edit.html.erb
+++ b/app/views/memos/edit.html.erb
@@ -1,18 +1,14 @@
-<head>
+<% content_for :css %>
   <style>
     form {
       background: white;
     }
-    
   </style>
-</head>
-<div class="container">
+<% end %>
   
-  <h1>Editing memo</h1>
-  
-  <%= render 'form' %>
-  
-  <%= link_to 'Show', @memo %> |
-  <%= link_to 'Back', sports_path %>
+<h1>Editing memo</h1>
 
-</div>
+<%= render 'form' %>
+
+<%= link_to 'Show', @memo %> |
+<%= link_to 'Back', sports_path %>
