Working on Recent Events

--- a/app/views/recent_events/_form.html.erb
+++ b/app/views/recent_events/_form.html.erb
@@ -10,6 +10,8 @@
       </ul>
     </div>
   <% end %>
+  <%= f.label :content %>
+  <%= f.text_area :content %>
 
   <div class="actions">
     <%= f.submit %>
