Added bus location 20 to the index

--- a/app/views/buses/index.html.erb
+++ b/app/views/buses/index.html.erb
@@ -41,6 +41,7 @@
           <th>17</th>
           <th>18</th>
           <th>19</th>
+          <th>20</th>
           <th>Edit</th>
           <th>Delete</th>
         </tr>
@@ -69,6 +70,7 @@
           <td><%= bus.seventeen %></td>
           <td><%= bus.eighteen %></td>
           <td><%= bus.nineteen %></td>
+          <td><%= bus.twenty %></td>
           <td><%= link_to 'Edit', edit_bus_path(bus) %></td>
           <td><%= link_to 'Delete', bus, confirm: 'Are you sure?', method: :delete %></td>
         </tr>
